@@ -40,6 +40,7 @@
  * The -a flag specifies that this is a posix 'assignment builtin' command.
  * The -s flag specifies that this is a posix 'special builtin' command.
  * The -u flag specifies that this is a posix 'standard utility'.
+ * The -n flag specifies that this command has a special entry point.
  * The rest of the line specifies the command name or names used to run
  * the command.
  */
@@ -62,7 +63,7 @@ cdcmd		-u cd chdir
 commandcmd	-u command
 dotcmd		-s .
 echocmd		echo
-evalcmd		-s eval
+evalcmd		-ns eval
 execcmd		-s exec
 exitcmd		-s exit
 exportcmd	-as export -as readonly
