@@ -371,7 +371,7 @@ histcmd(int argc, char **argv)
 				}
 
 				evalstring(strcpy(stalloc(strlen(s) + 1), s),
-					   ~0);
+					   0);
 				if (displayhist && hist) {
 					/*
 					 *  XXX what about recursive and
@@ -396,7 +396,7 @@ histcmd(int argc, char **argv)
 		editcmd = stalloc(strlen(editor) + strlen(editfile) + 2);
 		sprintf(editcmd, "%s %s", editor, editfile);
 		/* XXX - should use no JC command */
-		evalstring(editcmd, ~0);
+		evalstring(editcmd, 0);
 		INTON;
 		readcmdfile(editfile);	/* XXX - should read back - quick tst */
 		unlink(editfile);
